--- a/conta.html
+++ b/conta.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conta: Configurações</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="conta.css">
     <link rel="shortcut icon" href="older-adult.ico" type="image/x-icon">
 </head>
 <body onselectstart="return false">
@@ -21,6 +22,7 @@
     </nav>
     <main>
         <h2>Configurações</h2>
+        <h3><em>Em desenvolvimento</em></h3>
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://github.com/xandong">Alexandre Gurgel</a>.</p>
