--- a/conta.html
+++ b/conta.html
@@ -25,7 +25,7 @@
         <h3><em>Em desenvolvimento</em></h3>
     </main>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/xandong">Alexandre Gurgel</a>.</p>
+        <p>Desenvolvido por <a href="https://github.com/xandong" target="_blank">Alexandre Gurgel</a>.</p>
     </footer>
 </body>
 </html>
