--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ PASSOS:
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/xandong">Alexandre Gurgel</a>.</p>
+        <p>Desenvolvido por <a href="https://github.com/xandong" target="_blank">Alexandre Gurgel</a>.</p>
         <p class="hora"></p>
     </footer>
     <script>
