--- a/game.html
+++ b/game.html
@@ -77,7 +77,7 @@ PASSOS:
         </div>
     </main>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/xandong">Alexandre Gurgel</a>.</p>
+        <p>Desenvolvido por <a href="https://github.com/xandong" target="_blank">Alexandre Gurgel</a>.</p>
     </footer>
 </body>
 </html>
