add: resposividade, placar, e player a jogar

--- a/pages/game.html
+++ b/pages/game.html
@@ -25,7 +25,11 @@
       <a class="nav-item" href="../index.html">Home</a>
       <a class="nav-item" href="conta.html">Conta</a>
     </nav>
-    <div id="btn"><button id="reset" onclick="reset()">Resetar</button></div>
+    <div id="info-top">
+      <p id="player">Quem joga: X</p>
+      <p id="placar">Placar: X -> 0 | O -> 0</p>
+      <button id="reset" onclick="reset()">Resetar</button>
+    </div>
     <main>
       <div class="div-main">
         <div class="div-out">
