feat: criado modo singleplayer

--- a/pages/game.html
+++ b/pages/game.html
@@ -22,12 +22,13 @@
       </h1>
     </header>
     <nav class="nav-menu">
-      <a class="nav-item" href="../index.html">Home</a>
+      <a class="nav-item" active href="../index.html">Home</a>
+      <a class="nav-item active" href="#">1 P</a>
+      <a class="nav-item" href="game2P.html">2 P</a>
       <a class="nav-item" href="conta.html">Conta</a>
     </nav>
     <div id="info-top">
-      <p id="player">Quem joga: X</p>
-      <p id="placar">Placar: X -> 0 | O -> 0</p>
+      <p id="player"><strong>Sua vez!</strong></p>
       <button id="reset" onclick="reset()">Resetar</button>
     </div>
     <main>
