altera de regras

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <div id="welcome">
             <p>
               Acredito que saiba as regras, mas irei explicar mesmo assim!
-              hahaha
+              hahaha.
             </p>
             <p>
               Em um tabuleiro de 9 casas(3x3), vence quem preencher uma linha
-              reta de 3 casa consecutivas, seja na horizontal, vertical ou
+              reta de 3 casas consecutivas, seja na horizontal, vertical ou
               diagonal.
             </p>
           </div>
