--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
       <h1>
         Jogo da Velha
-        <div class="rotate">&#x1F9D3;</div>
+        <div class="rotate">🧓</div>
+        <!-- &#x1F9D3; -->
       </h1>
     </header>
     <nav class="nav-menu">
